# Folding_2.0

./: Test_pipline.py  Time.py  Time_summary.py  analyze_cluster_stats.py  batch_predict.py  compute_refined_rmsd.py  compute_rmsd.py  fit_all_final.py  fit_all_predictions.py  fullatom_refine.py  get_result.py  ibm_config.txt   instance_sampling.py  instance_sampling_group_1.py  merge_rmsd_energy.py  merge_rmsd_results.py  plot_energy_landscape.py  plot_energy_landscape_6czf.py  plot_time.py  plt_circuit.py  plt_result.py  post_analysis.py  post_process.py  prepare_grn_dataset.py  rmsd_all.py  run_quantum_postprocess.py  run_sampling.py  save_parquet_to_csv.py  summarize_quantum_data.py  tasks.csv  test_postprocessing.py  test_pp.py
Data/: toy1.xyz
Ghost_RMSD/: data_post_process.py  gen_data.py  make_training_dataset.py  plot_grn_results.py  predict.py  prepare_splits.py  refine_dataset.py  train.py
Protein_Asterion/: __init__.py
Protein_Folding/: protein_folding_result.py
SQD/: __init__.py  classical.py  prep.py  quantum.py
analysis_reconstruction/: __init__.py  cluster_analysis.py  structure_refine.py
dataset/: benchmark_info.txt
demo_output/: save_parquet_to_csv.py
e_results/: analyze_energy_stats.py
output_final/: colabfold_rmsd_summary.txt
qangle/: README.md  pyproject.toml
qangle/src/qangle/: __init__.py  circuits.py  fourier.py
qsad_postproc/: __init__.py  analyzer.py  cli.py  clustering.py  config.py  io.py  metrics.py  utils.py
qsad_pp/: __init__.py  data.py  decoder.py  pipeline.py  utils.py
qsadpp/: __init__.py  cluster.py  data.py  (+15 more)
(+19 files in other folders)
