[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qangle"
version = "0.1.0"
description = "Continuous-angle quantum modeling for protein fragments (Fourier->Pauli with Qiskit 2.x)"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "qiskit>=2.0.0",
]

[project.urls]
Homepage = "https://example.com/qangle"
